src/scss/components/_steppers.scss
// Component: steppers
//
// Description: Component styles for steppers
//

// Variables
//

// Properties
//

.steppers {
  --#{$prefix}stepper-active-indicator-height: 2px; // Controls the active step underline height.
  // --#{$prefix}stepper-button-color: #{$primary}; // Controls the mobile navigation button color.
  // --#{$prefix}stepper-button-color-hover: #{$primary}; // Controls the mobile navigation button hover color.
  --#{$prefix}stepper-index-color: var(--#{$prefix}color-text-secondary); // Controls the inactive step text and icon color.
  // --#{$prefix}stepper-color-active-indicator: #{$primary}; // Controls the active step underline color.
  --#{$prefix}stepper-background: transparent; // Controls the header and navigation background color. Default to white.
  --#{$prefix}stepper-border-color: var(--#{$prefix}color-border-subtle); // Controls the step border color.
  // --#{$prefix}stepper-color-active: #{$primary}; // Controls the active step text and icon color.
  // --#{$prefix}stepper-color-confirmed: var(--#{$prefix}color-text-base); // Controls the confirmed step text and icon color.
  --#{$prefix}stepper-dot-color: #{$progress-bg}; // Controls the dot background color.
  --#{$prefix}stepper-dot-color-done: #{$progress-bar-bg}; // Controls the completed dot background color.
  --#{$prefix}stepper-dot-gap: 8px; // Controls the gap between dots.
  --#{$prefix}stepper-dot-size: 4px; // Controls the dot indicator size.
  --#{$prefix}stepper-font-size: var(--#{$prefix}label-font-size-l); // Controls the step label font size.
  --#{$prefix}stepper-font-weight: 600; // Controls the step label font weight.
  --#{$prefix}stepper-header-height: 64px; // Controls the header height on mobile.
  --#{$prefix}stepper-header-margin-bottom: 1rem; // Controls the header bottom margin.
  --#{$prefix}stepper-icon-size: 24px; // Controls the icon width and height.
  --#{$prefix}stepper-icon-confirmed: var(--#{$prefix}icon-success); // Controls the icon color for confirmed steps.
  --#{$prefix}stepper-index-font-size: 0.875rem; // Controls the step index font size.
  --#{$prefix}stepper-item-background: var(--#{$prefix}stepper-background); // Controls the step background color, default to the header/nav background.
  --#{$prefix}stepper-item-border-color-active: var(--#{$prefix}color-border-primary); // Controls the step border color when active.
  --#{$prefix}stepper-item-text-color: var(--#{$prefix}color-text-muted); // Controls the step background color, default to the header/nav background.
  --#{$prefix}stepper-nav-height: 64px; // Controls the navigation bar height.
  --#{$prefix}stepper-number-background-active: var(--#{$prefix}color-background-primary); // Controls the number badge active background.
  --#{$prefix}stepper-number-border-color: var(--#{$prefix}color-border-subtle); // Controls the number badge border color.
  --#{$prefix}stepper-number-color: var(--#{$prefix}color-text-muted); // Controls the number badge active text color.
  --#{$prefix}stepper-number-size: 2rem; // Controls the number badge width and height.
  --#{$prefix}stepper-progress-height: 2px; // Controls the progress bar height.
  --#{$prefix}stepper-header-shadow: var(--#{$prefix}elevation-medium); // Controls the header box shadow.
  --#{$prefix}stepper-nav-shadow: var(--#{$prefix}elevation-medium); // Controls the navigation box shadow.
  --#{$prefix}stepper-spacing-x: #{$stepper-spacing-h}; // Controls the horizontal padding.
  --#{$prefix}stepper-spacing-y: #{$stepper-spacing-v}; // Controls the vertical padding for desktop steps.
  @include media-breakpoint-up(lg) {
    --#{$prefix}stepper-background: transparent;
  }
}

// Styles
//

/* stylelint-disable-next-line no-duplicate-selectors */
.steppers {

  // dark version
  &.bg-dark {
    --#{$prefix}stepper-color: #{$neutral-1-a2};
    --#{$prefix}stepper-color-active: #{$analogue-2-a6};
    --#{$prefix}stepper-color-confirmed: #{$white};
    --#{$prefix}stepper-background: transparent;
    --#{$prefix}stepper-border-color: #{$neutral-1-a8};
    --#{$prefix}stepper-color-active-indicator: #{$analogue-2-a6};
    --#{$prefix}stepper-number-border-color: #{$neutral-1-a6};
    --#{$prefix}stepper-number-background-active: #{$analogue-2-a6};
    --#{$prefix}stepper-number-border-color-active: #{$analogue-2-a6};
    --#{$prefix}stepper-number-color-active: #{$neutral-1-a10};
    --#{$prefix}stepper-dot-color-done: #{$analogue-2-a6};

    .steppers-nav {
      .progress-bar {
        background: var(--#{$prefix}stepper-dot-color-done);
      }
    }
  }
}

// steppers
.steppers-index {
  flex-shrink: 0;
  margin-left: auto;
  color: var(--#{$prefix}stepper-index-color);
  font-size: var(--#{$prefix}stepper-index-font-size);
  font-weight: var(--#{$prefix}stepper-font-weight);
  @include media-breakpoint-up(lg) {
    display: none;
  }

  span {
    margin-left: 0.25rem;

    &.active {
      --#{$prefix}stepper-index-color: var(--#{$prefix}color-text-base);
    }
  }
}

// navigation
.steppers-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: var(--#{$prefix}stepper-nav-height);
  background: var(--#{$prefix}stepper-background);

  .steppers-progress,
  .steppers-dots {
    width: 20%;

    .progress {
      height: var(--#{$prefix}stepper-progress-height);
    }
  }

  .steppers-progress {
    .progress {
      height: var(--#{$prefix}stepper-progress-height);
    }
  }

  .steppers-dots {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    padding: 0;

    li {
      width: var(--#{$prefix}stepper-dot-size);
      min-width: var(--#{$prefix}stepper-dot-size);
      height: var(--#{$prefix}stepper-dot-size);
      margin-right: var(--#{$prefix}stepper-dot-gap);
      padding: 0;
      list-style-type: none;
      border-radius: 50%;
      background: var(--#{$prefix}stepper-dot-color);

      &.done {
        background: var(--#{$prefix}stepper-dot-color-done);
      }
    }
  }
}

.steppers-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: var(--#{$prefix}stepper-spacing-y) 0;
  background: var(--#{$prefix}stepper-background);
  @include media-breakpoint-down(lg) {
    margin-bottom: var(--#{$prefix}stepper-header-margin-bottom);
    border-bottom: 2px solid var(--#{$prefix}stepper-border-color);
    box-shadow: var(--#{$prefix}stepper-header-shadow);
  }
  @include media-breakpoint-up(lg) {
    padding:0;
  }

  ul {
    display: flex;
    width: 100%;
    padding: 0;
    @include media-breakpoint-down(lg) {
      margin-bottom: 0;
    }

    li {
      display: flex;
      list-style-type: none;
      align-items: center;
      background-color: var(--#{$prefix}stepper-item-background);
      color: var(--#{$prefix}stepper-item-text-color);
      font-size: var(--#{$prefix}stepper-font-size);
      font-weight: var(--#{$prefix}stepper-font-weight);
      line-height: var(--#{$prefix}label-leading);

      // states
      &:not(.active) {
        @include media-breakpoint-down(lg) {
          position: absolute;
          display: block;
          height: 0;
          clip: rect(1px, 1px, 1px, 1px);
        }
      }

      &.active {
        --#{$prefix}stepper-item-text-color: var(--#{$prefix}color-text-primary);
        @include media-breakpoint-up(lg) {
          border-bottom: 2px solid var(--#{$prefix}stepper-item-border-color-active);
        }
      }

      &.steppers-index {
        display: block;
      }

      &.confirmed {
        --#{$prefix}stepper-item-text-color: var(--#{$prefix}color-text-base);
      }
    }
  }

  .icon {
    width: var(--#{$prefix}stepper-icon-size);
    height: var(--#{$prefix}stepper-icon-size);
    margin-right: var(--#{$prefix}spacing-xxs);
  }
}

// Steppers number badge
.steppers-number {
  display: flex;
  align-items: center;
  justify-content: center;
  width: var(--#{$prefix}stepper-number-size);
  height: var(--#{$prefix}stepper-number-size);
  margin-right: 0.667rem;
  border: 1px solid var(--#{$prefix}stepper-number-border-color);
  border-radius: 50%;
  background-color: var(--#{$prefix}stepper-number-background, transparent);
  color: var(--#{$prefix}stepper-number-color);

  .active &,
  .confirmed & {
    --#{$prefix}stepper-number-color: var(--#{$prefix}color-text-inverse);
  } 

  .active & {
    --#{$prefix}stepper-number-border-color: var(--#{$prefix}color-border-primary);
    --#{$prefix}stepper-number-background: var(--#{$prefix}color-background-primary);
  }
  .confirmed & {
    --#{$prefix}stepper-number-border-color: var(--#{$prefix}color-border-success);
    --#{$prefix}stepper-number-background: var(--#{$prefix}color-background-success);
  }

  .icon & {
    margin-right: 0;
    margin-left: 0;
  }
}

// Steppers success icon
.steppers-success {
  margin-left: auto;
  fill: var(--#{$prefix}stepper-icon-confirmed);

  // when inside a number badge
  .steppers-number & {
    --#{$prefix}stepper-icon-confirmed: var(--#{$prefix}icon-inverse);
    margin: 0;
  }
}

.steppers-save {
  justify-content: flex-start;
  flex-direction: column;
  > * {
    flex: 0 0 auto;
    align-self: flex-start;
    width: fit-content;
    max-width: 100%;
  }
  @include media-breakpoint-up(lg) {
    flex-direction: row;
    justify-content: flex-end;
  }
}

//Tablet horizontal / small desktop
@include media-breakpoint-up(lg) {
  .steppers {

    // header
    .steppers-header {

      // steps
      li {
        position: relative;
        display: flex;
        flex-grow: 1;
        align-items: center;
        padding: var(--#{$prefix}stepper-spacing-y) var(--#{$prefix}stepper-spacing-x);
        border-left: 1px solid var(--#{$prefix}stepper-border-color);

        &:nth-last-child(1) {
          border-right: 1px solid var(--#{$prefix}stepper-border-color);
        }

        // index
        &.steppers-index {
          display: none;
        }

        // active
        &.active {
          display: flex;

          .steppers-number {
            border-color: var(--#{$prefix}stepper-number-border-color-active);
            background: var(--#{$prefix}stepper-number-background-active);
          }
        }
      }
    }

    // navigation
    .steppers-nav {
      align-items: center;
      margin-top: 0.889rem;
      background: none;
      box-shadow: none; // TEMP

      .steppers-progress,
      .steppers-dots {
        display: none;
      }

      .steppers-btn-confirm {
        display: block;
        margin-left: auto;
      }
    }
  }
}

